--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -88,4 +88,4 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   background-attachment: fixed;
-} /*# sourceMappingURL=stylesheet.css.map */
+} /*# sourceMappingURL=style.css.map */
