--- a/assets/CSS/style.scss
+++ b/assets/CSS/style.scss
@@ -2,6 +2,18 @@ $primary_1: #0d3297;
 $primary_2: #081f5f;
 $navbarclr: gray;
 
+
+body {
+  margin: 0%;
+  padding: 0%;
+  font-family: Arial, Helvetica, sans-serif;
+  background-image: url("../REF/Background.jpg");
+  background-size:  cover, auto 100%;
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-attachment: fixed;
+} 
+
 .navbar {
   background-color: rgba($navbarclr,.45);
   backdrop-filter: blur(15px);
@@ -15,6 +27,10 @@ $navbarclr: gray;
   top: 0;
   width: 100%;
   transition: .4s;
+}
+
+.navbar .icon {
+  display: none;
 }
 
 .logowrap {
@@ -84,13 +100,77 @@ $navbarclr: gray;
   width: 100%;
 }
 
-body {
-  margin: 0%;
-  padding: 0%;
-  font-family: Arial, Helvetica, sans-serif;
-  background-image: url("../REF/Background.jpg");
-  background-size:  100%;
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-attachment: fixed;
-} /*# sourceMappingURL=stylesheet.css.map */
+#open-button {
+  display: none;
+}
+
+@media (max-width: 800px){
+  .navbar .nav-items:not(:first-child) {
+    display: none;
+    
+  }
+  #open-button
+  {
+    display: block;
+  }
+}
+
+.sidebar-nav {
+  background-color: rgba($navbarclr,.45);
+  display: none;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  transform: translateX(100%); /* Move off-screen */
+  height: 100vh;
+  width: 200px;
+  box-shadow: -10px 0 10px rgba(0,0,0,.1);
+  overflow: hidden;
+  transition: transform .6s ease; /* Transition the right property */
+}
+
+.sidebar-nav.active {
+  transform: translateX(0); /* Move on-screen */
+}
+
+.sidebar-nav::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1; /* Move the pseudo-element behind the sidebar content */
+  backdrop-filter: blur(15px);
+}
+
+
+.sidebar-list {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.sidebar-list .nav-items {
+  flex-direction: column;
+  margin: 20px;
+  align-items: center;
+}
+
+.sidebar-list .icon {
+  flex-direction: column;
+  align-items: center;
+  font-size: 30px;
+  color: black;
+  width: 100%;
+  display: flex;
+  text-decoration: none;
+}
